# gostrike

./: .gitignore  .gitmodules  ARCHITECTURE.md  CREDITS.md  Makefile  README.md  go.mod  justfile
cmd/gostrike/: main.go
cmd/schemagen/: main.go
configs/: admin_overrides.json  admins.json  gostrike.json  http.json  plugins.json
configs/gamedata/: gamedata.json
configs/schema/: cs2_schema.json
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docker/scripts/: install-metamod.sh  pre.sh
docs/: migration-from-cssharp.md  permissions.md  plugin-development.md
internal/bridge/: callbacks.go  exports.go  types.go
internal/ipc/: eventbus.go  services.go
internal/manager/: api.go  commands.go  loader.go  manager.go  registry.go  scope.go
internal/modules/: module.go
internal/modules/database/: database.go  helpers.go
internal/modules/http/: http.go  middleware.go  router.go
internal/modules/permissions/: api.go  cache.go  flags.go  groups.go  permissions.go  permissions_test.go  steamid.go  store.go
internal/runtime/: chat.go  commands.go  dispatcher.go  modules.go  recovery.go  runtime.go  timers.go
internal/scope/: scope.go
internal/shared/: types.go
internal/templates/: api.go  manager.go  templates.go
native/: CMakeLists.txt
native/include/: gostrike_abi.h
native/include/stub/: ISmmPlugin.h  igameevents.h  iplayerinfo.h  sh_vector.h
native/scripts/: generate_protos.sh
native/src/: chat_manager.cpp  chat_manager.h  convar_manager.cpp  convar_manager.h  entity_system.cpp  entity_system.h  game_functions.cpp  game_functions.h  gameconfig.cpp  gameconfig.h  go_bridge.cpp  go_bridge.h  gostrike.cpp  gostrike.h  memory_module.cpp  memory_module.h  player_manager.cpp  player_manager.h  schema.cpp  schema.h  utils.h
pkg/gostrike/: color.go  command.go  config.go  convar.go  database.go  entity.go  event.go  http.go  i18n.go  ipc.go  log.go  menu.go  permissions.go  player.go  server.go  target.go  timer.go
pkg/gostrike/entities/: generated.go
pkg/plugin/: plugin.go
plugins/example/: README.md  example.go
scripts/: build.sh  deploy.sh  docker-build.sh
tests/smoke/: SMOKE_TEST.md
